--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,7 +1,34 @@
 ja:
-  attributes:
+  activerecord:
+    models:
+      book: "書籍"
+    attributes:
+      book:
+        title: '書籍名'
+        memo: 'メモ'
+        author: '著者'
+        picture: '画像'
+  helpers:
+    show: '詳細の参照'
+    new: '新規登録'
+    edit: '内容の編集'
+    back: '一覧に戻る'
+    delete: '削除する'
+  controller:
+    create: '書籍の登録が正常に完了しました。'
+    update: '書籍の更新が正常に完了しました。'
+    delete: '書籍の削除が正常に完了しました。'
+  views:
     books:
-      title: 'タイトル'
-      memo: 'メモ'
-      author: '著者'
-      picture: '写真'
+      _book:
+      _form:
+      edit:
+        title: '登録内容の編集'
+      index:
+        title: '書籍一覧'
+      new:
+        title: '新規書籍の登録'
+      show:
+  error:
+    _form:
+      save: 'この本の保存を禁止しました。'
