change: 編集画面のタイトルを変更

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,7 +21,7 @@ en:
   views:
     books:
       edit:
-        title: 'Edit book'
+        title: 'Edit this book'
       index:
         title: 'Books'
       new:
