--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -103,6 +103,7 @@ ja:
       model_invalid: 'バリデーションに失敗しました: %{errors}'
       not_a_number: は数値で入力してください
       not_an_integer: は整数で入力してください
+      not_authorized: この操作を行う権限がありません
       odd: は奇数にしてください
       other_than: は%{count}以外の値にしてください
       present: は入力しないでください
